--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -16,15 +16,26 @@ body,html
   background-repeat: no-repeat
   background-attachment: fixed
 
-$top-left-color: #598797
-$top-right-color: #AA8155
-$bottom-left-color: #aa5555
-$bottom-right-color: #41824C
+$base-color: #598797
+
+$top-left-color: $base-color
+$top-right-color: lighten($base-color, 10%)
+$bottom-left-color: lighten($base-color, 10%)
+$bottom-right-color: $base-color
 
 $box-size: 5.5rem
 $box-size-hover: $box-size + 1.5rem
 $box-font-downsize: 2rem
 $title-height: 1.5rem
+
+h1
+  position: absolute
+  top: 20%
+  width: 100%
+  text-align: center
+  color: $base-color
+  opacity: 0.4
+  font-size: 40px
 
 .q
   width: 50%
@@ -33,6 +44,7 @@ $title-height: 1.5rem
   position: relative
 
   .bw
+    margin: 1px
     width: $box-size
     height: $box-size + $title-height
     position: absolute
