--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -25,6 +25,10 @@ body,html
   background-repeat: no-repeat
   background-attachment: fixed
 
+.r
+  width: 100%
+  height: 100%
+
 h1
   position: absolute
   top: 25%
