--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -27,8 +27,7 @@ $font-url: 'https://fonts.googleapis.com/css?family=' + $font-family + ':' + $fo
 body,html
   font-size: 16px
   height: 100%
-  background-image: radial-gradient(circle at 50% 50%, #ffffff 0%, #ccc 100%)
-  background-repeat: no-repeat
+  background-image: radial-gradient(circle at 50% 50%, transparent 0%, #ccc 100%), url('../assets/noise.png')
   background-attachment: fixed
 
 .root
