Add links to audio files

--- a/client/sass/audio-player.sass
+++ b/client/sass/audio-player.sass
@@ -26,8 +26,13 @@ $progressbar-height: 0.2rem
 
       .name
         height: $filebar-height - $progressbar-height
-        padding-left: 1em
+        padding: 0 1em
         line-height: $filebar-height - $progressbar-height
+        a
+          font-family: 'Material Icons'
+          text-decoration: none
+          float: right
+          font-size: 1.5em
 
       .progress
         height: $progressbar-height
