Make audio player file names links, improve hidden element behaviour

--- a/client/sass/audio-player.sass
+++ b/client/sass/audio-player.sass
@@ -29,10 +29,9 @@ $progressbar-height: 0.2rem
         padding: 0 1em
         line-height: $filebar-height - $progressbar-height
         a
-          font-family: 'Material Icons'
           text-decoration: none
-          float: right
-          font-size: 1.5em
+          &:hover
+            text-decoration: underline
 
       .progress
         height: $progressbar-height
