--- a/client/sass/audio-player.sass
+++ b/client/sass/audio-player.sass
@@ -36,6 +36,7 @@ $progressbar-height: 0.2rem
       .progress
         height: $progressbar-height
         background-color: rgba(255, 255, 255, 0.2)
+        cursor: pointer
 
         .progress-inner
           background-color: rgba(255, 255, 255, 0.75)
